--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cra-template-prettier",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "keywords": [
     "react",
     "create-react-app",
@@ -11,7 +11,7 @@
   "main": "template.json",
   "repository": {
     "type": "git",
-    "url": "https://github.com/7iomka/cra-template-prettier.git"
+    "url": "git+https://github.com/7iomka/cra-template-prettier.git"
   },
   "license": "MIT",
   "engines": {
@@ -23,5 +23,7 @@
   "files": [
     "template",
     "template.json"
-  ]
+  ],
+  "homepage": "https://github.com/7iomka/cra-template-prettier#readme",
+  "author": "7iomka"
 }
